# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  .travis.yml  Dockerfile  README.md  Vagrantfile  deployment.yaml  entrypoint.sh  main.tf  outputs.tf  pyproject.toml  terraform.tfvars.template  variables.tf  webhook.sh
.github/workflows/: ci-cd-workflow.yml  webhook.sh
documentation/: todo-component.drawio  todo-container.drawio  todo-context.drawio
todo_app/: app.py  flask_config.py
todo_app/data/: todo_board.py  trello_board.py
todo_app/templates/: confirmation.html  index.html  layout.html
todo_app/tests/: test_integration.py  test_items.py
todo_app/tests_e2e/: test_e2e.py
